// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReadMore component Read More component renders correctly with props 1`] = `
<Styled(BodyCopy)
  className="read-more-text false"
  color="text.primary"
  component="div"
  fontFamily="primary"
  fontSize={12}
  fontWeight="regular"
  letterSpacing="normal"
  lineHeight="normal"
  link={null}
  tabIndex="0"
  textAlign="left"
>
  <Styled(BodyCopy)
    className="body-copy"
    color="text.primary"
    component="div"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Check out all of our girls school dresses, jumpers and more:",
      }
    }
    data-locator="plp_seo_module"
    fontFamily="secondary"
    fontSize="fs14"
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="center"
  />
</Styled(BodyCopy)>
`;

exports[`ReadMore component renders correctly without props 1`] = `
<Styled(BodyCopy)
  className=" false"
  color="text.primary"
  component="div"
  fontFamily="primary"
  fontSize={12}
  fontWeight="regular"
  letterSpacing="normal"
  lineHeight="normal"
  link={null}
  tabIndex="0"
  textAlign="left"
>
  <Styled(BodyCopy)
    className="body-copy"
    color="text.primary"
    component="div"
    dangerouslySetInnerHTML={
      Object {
        "__html": "",
      }
    }
    data-locator="plp_seo_module"
    fontFamily="secondary"
    fontSize="fs14"
    fontWeight="regular"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="center"
  />
</Styled(BodyCopy)>
`;
